--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ body {
     margin: 30px 16px 16px 17px;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 header {
     display: flex;
     height: 331px;
