--- a/contato.css
+++ b/contato.css
@@ -2,6 +2,8 @@
     width: 20%;
     height: 490px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 input {
@@ -11,5 +13,5 @@ input {
 }
 
 .msg {
-    height: 90px;
+    height: 150px;
 }
