--- a/beneficios.css
+++ b/beneficios.css
@@ -29,3 +29,9 @@
     flex-direction: column;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 400px) {
+    section {
+        display: none;
+    }
+}
